# genesis

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  agent.py  cloudbuild.yaml  deploy.sh  pyproject.toml  start.sh
agents/: __init__.py  archivist_agent.py  dispatcher_agent.py  retry_patch.py  root_agent.py  schemas.py  timekeeper_agent.py
api/: main.py  routes.py
db/: __init__.py  embeddings.py  repo.py  schema.sql
demo/: brain_dump.txt
mcp/: google_tools_server.py  tools.yaml
tools_server/: google_tools_server.py  tools.yaml
